# paperflow

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CI_DIAGNOSTIC_REPORT.md  GIT_SETUP.md  MANIFEST.in  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_REPORT.md  PROJECT_FEATURES.md  PROJECT_GUIDE.md  PROJECT_OPTIMIZATION_SUGGESTIONS.md  PROJECT_STRUCTURE.md  README.md  SETUP_ENVIRONMENT.md  STRUCTURE_TREE.txt  TEST_REPORT.md  auto_collect.py  automation.py  diagnose_ci.sh  find_collection_key.py  push_to_github.bat  pyproject.toml  requirements.txt  setup.py  test-results.xml  test_zotero_connection.py  使用说明.md
.claude/: settings.local.json
.github/workflows/: ci.yml  daily-paper-collection.yml
arxiv_zotero/: __main__.py  cli.py
arxiv_zotero/clients/: __init__.py  arxiv_client.py  chinaxiv_client.py  openalex_client.py  zotero_client.py
arxiv_zotero/config/: app_config.py  arxiv_config.py  bilingual_config.py  metadata_config.py
arxiv_zotero/core/: __init__.py  connector.py  paper_processor.py  search_params.py
arxiv_zotero/utils/: __init__.py  collection_logger.py  config_loader.py  config_loader_env.py  credentials.py  decorators.py  errors.py  journal_ranker.py  pdf_manager.py  performance.py  summarizer.py
config/: bilingual_keywords.yaml  development.yaml  production.yaml
dev-tools/: cleanup_duplicates.py  debug_zotero_api.py  test_api_optimization.py  test_duplicate_fix.py  test_zotero_search_methods.py
docs/: API_USAGE.md  ARCHITECTURE.md  CONCURRENT_DUPLICATE_FIX.md  IMPROVEMENTS.md  LOG_CLEANUP_GUIDE.md  LOG_CLEANUP_SETUP.md  OPTIMIZATION_SUMMARY.md  PROJECT_OPTIMIZATIONS.md  PROJECT_STRUCTURE.md  REFACTORING_2026-01-24.md  SEARCH_GUIDE.md
docs/reports/: DUPLICATE_DETECTION_REPORT.md  TIMEZONE_FIX_REPORT.md
examples/: auto_collection_workflow.py  basic_usage.py
logs/: collection_log.md
paperflow/: __init__.py  __main__.py  cli.py
paperflow/clients/: arxiv_client.py  chinaxiv_client.py  zotero_client.py
paperflow/config/: __init__.py  bilingual_config.py
paperflow/core/: connector.py  paper_processor.py
paperflow/utils/: __init__.py  collection_logger.py  config_loader_env.py  decorators.py  journal_ranker.py  pdf_manager.py  performance.py  summarizer.py
scripts/: README.md  auto_collect.py  clean_logs.bat  clean_logs.sh  find_zotero_collections.py  git-proxy-push.bat  git-proxy-push.sh  preload_journal_cache.py  run_auto_collection.py  run_manual_search.py  search_papers.py  setup_dev.bat  setup_dev.sh  test_zotero_connection.py
tests/: README.md  __init__.py  conftest.py  test_duplicate_detection.py  test_performance.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_arxiv_client.py  test_cli.py  test_concurrent_duplicate_detection.py  test_config_loader.py  test_imports.py  (+3 more)
