[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-zotero-connector"
version = "0.1.0"
description = "Automatically collect papers from ArXiv and organize them in your Zotero library with AI-powered summarization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stepan Kropachev", email = "your.email@example.com"},
]
requires-python = ">=3.7"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyzotero>=1.5.0",
    "arxiv>=2.0.0",
    "requests>=2.31.0",
    "pytz>=2023.3",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "PyPDF2>=3.0.0",
    "google-generativeai>=0.3.0",
]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100