[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-zotero-connector"
version = "2.1.0"
description = "Automatically collect papers from ArXiv and organize them in your Zotero library with AI-powered summarization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stepan Kropachev", email = "your.email@example.com"},
]
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyzotero>=1.5.0",
    "arxiv>=2.0.0",
    "requests>=2.31.0",
    "pytz>=2023.3",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
# 开发工具 | Development tools
dev = [
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.6.0",
]

# 测试工具 | Testing tools
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

# 代码质量检查 | Code quality
lint = [
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "bandit>=1.7.0",
]

# CLI 用户体验 | CLI user experience
cli = [
    "rich>=13.0.0",
]

# 类型检查 | Type checking
type = [
    "types-PyYAML",
    "types-requests",
]

# AI 功能（可选）| AI features (optional)
ai = [
    "google-generativeai>=0.3.0",
]

# 所有开发依赖（便捷安装）
all = [
    "arxiv-zotero-connector[dev,test,lint,type,ai]",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]